# svea_jazzy

./: .gitignore  entrypoint  requirements.txt
docker/: Dockerfile  Dockerfile.base
src/el2425/: package.xml
src/el2425/launch/: traffic_light.xml
src/el2425/scripts/: traffic_light.py
src/svea_charging/: package.xml
src/svea_charging/foxglove/: charging.json  chargingSim.json
src/svea_charging/launch/: aruco_llc.xml  bt_charging.xml  bt_charging_mpc.xml  charging.xml  ppCharging.xml
src/svea_charging/params/: camera.yaml
src/svea_charging/scripts/: aruco_camera_test.py  bt_runner.py  cameraRun.py  control_mux.py  line_follower.py  line_navigation.py  mpc.py  purePursuit.py  stanleyExecutable.py
src/svea_charging/svea_charging/behaviourTree/: behaviourTree.py
src/svea_charging/svea_charging/controllers/: stanleyController.py
src/svea_core/launch/: simulation.xml  svea.xml  svea_mocap.xml
src/svea_core/params/: mpc_default.yaml  zenoh.json5
src/svea_core/scripts/: encoder_filter.py  imu_bias_remover.py  lidar_timer.py  sim_lidar.py  sim_svea.py
src/svea_core/svea_core/: rosonic.py
src/svea_core/svea_core/controllers/: mpc.py  pure_pursuit.py
src/svea_core/svea_core/interfaces/: actuation.py  (+1 more)
src/svea_core/util/: start_micro_ros.sh
src/svea_examples/launch/: floor2.xml  teleop.xml
src/svea_examples/scripts/: pure_pursuit.py
src/svea_localization/launch/: localization.xml  localization_mocap.xml  localize.xml  transforms.xml
src/svea_mocap/: package.xml
src/svea_mocap/scripts/: mocap_msg_filter.py
util/: config.sh  run
(+4 files in other folders)
